[gd_scene load_steps=7 format=2]

[ext_resource path="res://Recursos/Estilos/Interfaz.tres" type="Theme" id=1]
[ext_resource path="res://Pantallas/Interfaces/PantallaCompraAcesorios.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Imagenes/Sprites/Equipo/Pies/blue_gold.png" type="Texture2D" id=3]
[ext_resource path="res://Recursos/Imagenes/Sprites/Equipo/Piernas/belt_gray.png" type="Texture2D" id=4]
[ext_resource path="res://Recursos/Imagenes/Sprites/Equipo/Pecho/animal_skin.png" type="Texture2D" id=5]
[ext_resource path="res://Recursos/Imagenes/Sprites/Equipo/Cabeza/art_dragonhelm.png" type="Texture2D" id=6]

[node name="PantallaCompraAcesorios" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
offset_right = 384.0
offset_bottom = 248.0

[node name="TabBar" type="TabContainer" parent="Panel"]
offset_left = 152.0
offset_top = 8.0
offset_right = 376.0
offset_bottom = 240.0
theme = ExtResource( 1 )

[node name="Cabeza" type="Control" parent="Panel/TabBar"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 31.0
offset_right = -11.0
offset_bottom = -11.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/TabBar/Cabeza"]
offset_left = -3.0
offset_right = 205.0
offset_bottom = 193.0

[node name="GridContainer" type="GridContainer" parent="Panel/TabBar/Cabeza/ScrollContainer"]
theme_override_constants/v_separation = 1
theme_override_constants/h_separation = 1
columns = 3

[node name="Torso" type="Control" parent="Panel/TabBar"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 31.0
offset_right = -11.0
offset_bottom = -11.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/TabBar/Torso"]
offset_left = -3.0
offset_right = 205.0
offset_bottom = 193.0

[node name="GridContainer" type="GridContainer" parent="Panel/TabBar/Torso/ScrollContainer"]
theme_override_constants/v_separation = 1
theme_override_constants/h_separation = 1
columns = 3

[node name="Piernas" type="Control" parent="Panel/TabBar"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 31.0
offset_right = -11.0
offset_bottom = -11.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/TabBar/Piernas"]
offset_left = -3.0
offset_right = 205.0
offset_bottom = 193.0

[node name="GridContainer" type="GridContainer" parent="Panel/TabBar/Piernas/ScrollContainer"]
theme_override_constants/v_separation = 1
theme_override_constants/h_separation = 1
columns = 3

[node name="Pies" type="Control" parent="Panel/TabBar"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = 31.0
offset_right = -11.0
offset_bottom = -11.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/TabBar/Pies"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_right = 3.0
offset_bottom = 3.0

[node name="GridContainer" type="GridContainer" parent="Panel/TabBar/Pies/ScrollContainer"]
theme_override_constants/v_separation = 1
theme_override_constants/h_separation = 1
columns = 3

[node name="Panel" type="Panel" parent="Panel"]
offset_left = 8.0
offset_top = 32.0
offset_right = 144.0
offset_bottom = 240.0

[node name="sprCabeza" type="Sprite2D" parent="Panel/Panel"]
position = Vector2( 64, 32 )
texture = ExtResource( 6 )

[node name="sprTorso" type="Sprite2D" parent="Panel/Panel"]
position = Vector2( 64, 32 )
texture = ExtResource( 5 )

[node name="sprPiernas" type="Sprite2D" parent="Panel/Panel"]
position = Vector2( 64, 32 )
texture = ExtResource( 4 )

[node name="sprPies" type="Sprite2D" parent="Panel/Panel"]
position = Vector2( 64, 32 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Panel"]
offset_left = 8.0
offset_top = 8.0
offset_right = 152.0
offset_bottom = 32.0
theme = ExtResource( 1 )
text = "Cosmeticos Jugador"
align = 1
valign = 1
